--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/png" href="https://i.imgur.com/aRy9T88.png" sizes="512x512">
   <link rel="apple-touch-icon" href="https://i.imgur.com/aRy9T88.png">
 
-  <!-- SEO Meta Tags -->
+  <!-- SEO Meta Tags (perbaikan: keywords) -->
   <title>Muslih Fvnky Shop - Jual FLM, Projek FL Studio Mobile, Jasa Musik Murah</title>
   <meta name="description" content="Muslih Fvnky Shop menjual FLM dan projek FL Studio Mobile, menerima pesanan lagu, jasa mixing mastering, serta penyusunan chord & BPM. Harga murah, fast respon, dan original.">
   <meta name="keywords" content="Muslih Fvnky Shop, Jual FLM, Projek FL Studio Mobile, Pemesanan Lagu, Jasa Mixing Mastering, Nyusun Chord, BPM, Musik Murah">
@@ -33,6 +33,8 @@
       --accent4: #ec4899;
     }
 
+    html, body { height: 100%; margin: 0; padding: 0; }
+
     body {
       background: url('https://i.imgur.com/p0K2KQs.png') no-repeat center center fixed;
       background-size: cover;
@@ -45,7 +47,7 @@
       padding: 2rem 0;
     }
 
-    /* Header gradient card */
+    /* Header gradient card: allow wrap so extra link won't push layout */
     .animated-gradient {
       background: linear-gradient(-45deg, #106EBE, #0FFCBE, #106EBE, #0FFCBE);
       background-size: 400% 400%;
@@ -53,10 +55,11 @@
       padding: 1rem 1.25rem;
       border-radius: 12px;
       display: flex;
+      flex-wrap: wrap; /* <-- important */
       align-items: center;
       gap: 1rem;
       box-shadow: 0 6px 30px rgba(0,0,0,0.45);
-      max-width: 900px;
+      max-width: 1000px;
       margin: 1rem auto;
       position: relative;
       z-index: 10;
@@ -66,7 +69,10 @@
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
-    .float-logo { width:56px; height:56px; border-radius:50%; box-shadow: 0 6px 20px rgba(0,0,0,0.5); }
+
+    /* logo style (ensures consistent size & no layout jump) */
+    .float-logo { width:56px; height:56px; border-radius:50%; box-shadow: 0 6px 20px rgba(0,0,0,0.5); object-fit:cover; flex-shrink:0; }
+
     .header-extra { margin-left:auto; display:flex; gap:0.5rem; align-items:center; }
 
     /* nav quick link */
@@ -79,12 +85,13 @@
       display:inline-flex; gap:8px; align-items:center;
       border: 1px solid rgba(255,255,255,0.04);
       transition: transform .18s ease, background .18s ease;
+      text-decoration: none;
     }
     .header-link:hover { transform: translateY(-3px); background: rgba(255,255,255,0.10); }
 
-    /* Buttons grid */
+    /* Buttons grid (responsive) */
     .btn-grid { display: grid; grid-template-columns: 1fr; gap: 0.75rem; }
-    @media (min-width: 768px) { .btn-grid { grid-template-columns: repeat(2, minmax(0,1fr)); } }
+    @media (min-width: 640px) { .btn-grid { grid-template-columns: repeat(2, minmax(0,1fr)); } }
     @media (min-width: 1024px) { .btn-grid { grid-template-columns: repeat(4, minmax(0,1fr)); } }
 
     /* neutral button style (kept) */
@@ -95,12 +102,13 @@
       backdrop-filter: blur(6px);
       color: white;
       display: inline-block;
-      min-width: 220px;
+      width: 100%;
       text-align: center;
       padding: .9rem 1rem;
       font-weight: 700;
       border-radius: 12px;
       box-shadow: 0 6px 20px rgba(0,0,0,0.35);
+      text-decoration: none;
     }
     .glow-btn:hover { background: #0FFCBE; color: black; box-shadow: 0 10px 30px rgba(15,252,190,0.18); transform: translateY(-4px); }
 
@@ -117,76 +125,33 @@
       color: #06121a;
       background: linear-gradient(90deg, var(--accent1), var(--accent2), var(--accent3));
       background-size: 200% 100%;
-      box-shadow:
-        0 10px 40px rgba(9,102,137,0.18),
-        inset 0 -6px 18px rgba(0,0,0,0.08);
-      transform: translateZ(0);
-      transition: transform .22s ease, box-shadow .22s ease, background-position .6s ease;
+      box-shadow: 0 10px 40px rgba(9,102,137,0.18);
+      text-decoration: none;
+      width: 100%;
     }
-    .primary-btn:hover {
-      transform: translateY(-6px) scale(1.01);
-      box-shadow: 0 18px 50px rgba(9,102,137,0.22);
-      background-position: 100% 0;
-    }
+    .primary-btn:hover { transform: translateY(-6px) scale(1.01); }
 
-    /* icon circle */
-    .primary-icon {
-      width: 38px; height: 38px; border-radius: 10px;
-      background: rgba(255,255,255,0.95); display:flex; align-items:center; justify-content:center;
-      font-weight: 900;
-      box-shadow: 0 6px 18px rgba(2,6,23,0.25);
-    }
+    .primary-icon { width:38px; height:38px; border-radius:10px; background:#fff; display:flex; align-items:center; justify-content:center; font-weight:900; }
 
-    /* badge count */
     .badge {
-      position: absolute;
-      top: -10px;
-      right: -10px;
-      background: #ff4d6d;
-      color: white;
-      font-weight: 800;
-      font-size: 12px;
-      padding: 6px 8px;
-      border-radius: 999px;
-      box-shadow: 0 8px 22px rgba(255,77,109,0.18);
-      transform-origin: center;
-      animation: badgePop .5s cubic-bezier(.2,.9,.3,1);
-    }
-    @keyframes badgePop {
-      from { transform: scale(0.6); opacity: 0; }
-      to { transform: scale(1); opacity: 1; }
+      position: absolute; top: -10px; right: -10px;
+      background: #ff4d6d; color:#fff; font-weight:800; font-size:12px;
+      padding: 6px 8px; border-radius:999px; box-shadow: 0 8px 22px rgba(255,77,109,0.18);
     }
 
-    /* subtle pulse behind primary button to draw attention */
-    .primary-pulse {
-      position: absolute;
-      width: 140%;
-      height: 160%;
-      background: radial-gradient(circle at center, rgba(6,182,212,0.14), transparent 30%);
-      filter: blur(20px);
-      z-index: -1;
-      border-radius: 18px;
-      animation: pulse 2.6s infinite;
-      opacity: .9;
-    }
-    @keyframes pulse {
-      0% { transform: scale(.9); opacity: .55; }
-      50% { transform: scale(1.05); opacity: .9; }
-      100% { transform: scale(.9); opacity: .55; }
-    }
+    footer small { color: rgba(255,255,255,0.75); }
 
-    /* accessibility focus */
-    a:focus, button:focus {
-      outline: 3px solid rgba(99,102,241,0.22);
-      outline-offset: 4px;
-      border-radius: 10px;
+    /* fadeSlide keyframes used by inline script */
+    @keyframes fadeSlide {
+      from { opacity: 0; transform: translateY(12px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
 
   <!-- Header -->
-  <header class="animated-gradient">
+  <header class="animated-gradient" role="banner">
     <img src="https://i.imgur.com/4jIRft9.jpeg" alt="Logo Muslih Fvnky" class="float-logo">
     <div>
       <h1 class="text-xl font-bold">Muslih Fvnky Shop</h1>
@@ -194,11 +159,8 @@
     </div>
 
     <!-- quick link to Testimoni di kanan -->
-    <div class="header-extra">
-      <!-- other quick links could go here -->
-      <a href="testimoni.html" class="header-link" title="Lihat Testimoni" target="_blank" rel="noopener">
-        ⭐ Testimoni
-      </a>
+    <div class="header-extra" aria-hidden="false">
+      <a href="testimoni.html" class="header-link" title="Lihat Testimoni" target="_blank" rel="noopener">⭐ Testimoni</a>
     </div>
   </header>
 
@@ -206,17 +168,15 @@
     <div class="max-w-2xl mx-auto p-4">
 
       <!-- Welcome -->
-      <section class="mb-8" style="animation: fadeSlide 1s both; --delay: .3s;">
+      <section class="mb-8" style="animation: fadeSlide 0.9s ease-out forwards; animation-delay: 0.2s;">
         <h2 class="text-xl font-bold mb-2">Selamat Datang di Muslih Fvnky Shop</h2>
         <p class="text-gray-200 text-sm">
-          Saya menjual FLM (Projek FL Studio Mobile) dan menerima pemesanan lagu.
-          Anda juga bisa menggunakan jasa mixing mastering, serta penyusunan chord & BPM.
-          Website ini akan diupdate setiap hari, jadi nantikan projek menarik lainnya!
+          Saya menjual FLM (Projek FL Studio Mobile) dan menerima pemesanan lagu. Jasa mixing/mastering juga tersedia.
         </p>
       </section>
 
       <!-- Buttons -->
-      <section class="mb-8">
+      <section class="mb-8" style="animation: fadeSlide 0.9s ease-out forwards; animation-delay: 0.45s;">
         <h3 class="text-lg font-semibold border-b-2 border-[#0FFCBE] inline-block mb-3">Silahkan Pilih!!</h3>
 
         <div class="btn-grid">
@@ -225,26 +185,11 @@
           <a href="jasa-mixing.html" class="glow-btn">Jasa Mixing & Mastering</a>
           <a href="jasa-chord-dan-bpm.html" class="glow-btn">Jasa Nyusun Chord & BPM</a>
 
-          <!-- Primary Testimoni button: make it span two columns on large screens -->
+          <!-- Primary Testimoni button spans full width -->
           <div style="grid-column: 1 / -1;">
-            <a
-              href="testimoni.html"
-              target="_blank"
-              rel="noopener"
-              class="primary-btn"
-              role="button"
-              aria-label="Buka halaman testimoni pelanggan (buka di tab baru)"
-              style="position:relative; width:100%; padding-left:1.25rem; padding-right:1.25rem;"
-            >
-              <span class="primary-pulse" aria-hidden="true"></span>
-
-              <!-- icon -->
+            <a href="testimoni.html" target="_blank" rel="noopener" class="primary-btn" aria-label="Buka halaman Testimoni di tab baru">
               <span class="primary-icon" aria-hidden="true">📸</span>
-
-              <!-- label -->
-              <span style="font-size:1.05rem; letter-spacing:0.02em;">Lihat Semua Testimoni</span>
-
-              <!-- badge (example count) -->
+              <span>Lihat Semua Testimoni</span>
               <span class="badge" aria-hidden="true">9</span>
             </a>
           </div>
@@ -252,7 +197,7 @@
       </section>
 
       <!-- Keunggulan -->
-      <section class="mb-8">
+      <section class="mb-8" style="animation: fadeSlide 0.9s ease-out forwards; animation-delay: 0.7s;">
         <h3 class="text-lg font-semibold border-b-2 border-[#0FFCBE] inline-block mb-3">Keunggulan Kami</h3>
         <ul class="list-disc list-inside text-sm text-gray-200">
           <li>✅ Harga Murah</li>
@@ -263,7 +208,7 @@
       </section>
 
       <!-- Kontak -->
-      <section class="mb-8 text-sm text-gray-200">
+      <section class="mb-8 text-sm text-gray-200" style="animation: fadeSlide 0.9s ease-out forwards; animation-delay: 0.95s;">
         <h3 class="text-lg font-semibold border-b-2 border-[#0FFCBE] inline-block mb-3">Hubungi Kami</h3>
         <p>WhatsApp: <a href="https://wa.me/6283821665970" class="underline hover:text-[#0FFCBE]">Wa Bang Muslih Ganteng</a></p>
         <p>Instagram: <a href="https://www.instagram.com/mslihh.wav" class="underline hover:text-[#0FFCBE]">@mslihh.wav</a></p>
@@ -277,13 +222,9 @@
     </div>
   </div>
 
-  <!-- small inline animation for fadeSlide (used above) -->
+  <!-- small inline script to apply slight stagger (keeps markup tidy) -->
   <script>
-    // tiny helper to apply progressive animation delays (keeps markup tidy)
-    document.querySelectorAll('section').forEach((el, i) => {
-      el.style.animation = 'fadeSlide 0.9s ease-out forwards';
-      el.style.animationDelay = (0.25 * i) + 's';
-    });
+    // progressive animation delays already set inline above; nothing else needed.
   </script>
 </body>
 </html>
