--- a/jual-flm.html
+++ b/jual-flm.html
@@ -293,6 +293,7 @@
       <label><input type="checkbox" class="filter-cat" value="horeg"> Horeg</label>
       <label><input type="checkbox" class="filter-cat" value="bootleg"> Bootleg</label>
       <label><input type="checkbox" class="filter-cat" value="indobass"> Indobass</label>
+      <label><input type="checkbox" class="filter-cat" value="FYP Tiktok"> FYP Tiktok</label>
     </aside>
 
     <!-- CART PANEL -->
@@ -320,7 +321,7 @@
     <ul id="produk-grid" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-4">
       <!-- NOTE: setiap li sekarang punya data-price dan data-category sesuai mapping yang kamu kirim -->
       <!-- 1 -->
-      <li data-uid="1" data-prod-id="rully" data-price="89000" data-category="slow" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+      <li data-uid="1" data-prod-id="rully" data-price="89000" data-category="slow,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
         <img src="https://i.imgur.com/ghNd4So.jpeg" alt="FLM RULLY FVNKY" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
         <div class="flex-1">
           <div class="font-semibold leading-tight">FLM RULLY FVNKY</div>
@@ -369,7 +370,7 @@
       </li>
 
       <!-- 5 -->
-      <li data-uid="4" data-prod-id="maman" data-price="98000" data-category="slow,bootleg" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+      <li data-uid="4" data-prod-id="maman" data-price="98000" data-category="slow,bootleg,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
         <img src="https://i.imgur.com/ghNd4So.jpeg" alt="FLM MAMAN FVNDY" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
         <div class="flex-1">
           <div class="font-semibold leading-tight">FLM MAMAN FVNDY</div>
@@ -401,7 +402,7 @@
       </li>
 
       <!-- 7 -->
-      <li data-uid="6" data-prod-id="happy" data-price="75000" data-category="slow" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+      <li data-uid="6" data-prod-id="happy" data-price="75000" data-category="slow,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
         <img src="https://i.imgur.com/ghNd4So.jpeg" alt="FLM HAPPY TEAM ORI" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
         <div class="flex-1">
           <div class="font-semibold leading-tight">FLM HAPPY TEAM ORI</div>
@@ -417,7 +418,7 @@
       </li>
 
       <!-- 8 -->
-      <li data-uid="7" data-prod-id="arif" data-price="50000" data-category="slow" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+      <li data-uid="7" data-prod-id="arif" data-price="50000" data-category="slow,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
         <img src="https://i.imgur.com/ghNd4So.jpeg" alt="FLM Arif Sopan" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
         <div class="flex-1">
           <div class="font-semibold leading-tight">FLM Arif Sopan</div>
@@ -433,7 +434,7 @@
       </li>
 
       <!-- 9 -->
-      <li data-uid="8" data-prod-id="lambada" data-price="92000" data-category="indobass" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+      <li data-uid="8" data-prod-id="lambada" data-price="92000" data-category="indobass,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
         <img src="https://i.imgur.com/ghNd4So.jpeg" alt="FLM Lambada" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
         <div class="flex-1">
           <div class="font-semibold leading-tight">FLM Lambada</div>
@@ -593,7 +594,7 @@
       </li>
 
       <!-- 19 -->
-      <li data-uid="18" data-prod-id="velocity" data-price="110000" data-category="indobass" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+      <li data-uid="18" data-prod-id="velocity" data-price="110000" data-category="indobass,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
         <img src="https://i.imgur.com/ghNd4So.jpeg" alt="FLM VELOCITY RADYA VERSION" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
         <div class="flex-1">
           <div class="font-semibold leading-tight">FLM VELOCITY RADYA VERSION</div>
@@ -767,6 +768,21 @@
         </div>
         <!-- audio file name sesuai input: ####pepass.....mp3 -->
         <audio id="audio29" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/29.mp3" preload="metadata"></audio>
+      </li>
+      <!-- 30 -->
+      <li data-uid="29" data-prod-id="Bootleg Slebew" data-price="100000" data-category="slow,bootleg,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+        <img src="https://i.imgur.com/ghNd4So.jpeg" alt="Bootleg Slebew" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
+        <div class="flex-1">
+          <div class="font-semibold leading-tight">Bootleg Slebew</div>
+          <div class="text-sm opacity-90">💲 Rp100.000</div>
+          <div class="mt-2 flex gap-2 items-center">
+            <button data-audio="audio30" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
+            <a data-buy="Bootleg Slebew" href="pembayaran.html?produk=Bootleg%20Slebew" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
+            <button data-cart="Bootleg Slebew" class="add-cart-btn px-3 py-2 rounded-xl bg-[#ffd24d] text-black font-semibold">Tambah ke Keranjang</button>
+          </div>
+          <div class="player-controls-container"></div>
+        </div>
+        <audio id="audio30" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/bootlegslebew.mp3" preload="metadata"></audio>
       </li>
 
     </ul>
