--- a/jual-flm.html
+++ b/jual-flm.html
@@ -769,6 +769,7 @@
         <!-- audio file name sesuai input: ####pepass.....mp3 -->
         <audio id="audio29" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/29.mp3" preload="metadata"></audio>
       </li>
+ 
       <!-- 30 -->
       <li data-uid="29" data-prod-id="Bootleg Slebew" data-price="100000" data-category="slow,bootleg,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
         <img src="https://i.imgur.com/ghNd4So.jpeg" alt="Bootleg Slebew" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
@@ -783,6 +784,54 @@
           <div class="player-controls-container"></div>
         </div>
         <audio id="audio30" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/bootlegslebew.mp3" preload="metadata"></audio>
+      </li>
+
+      <!-- 31 -->
+      <li data-uid="30" data-prod-id="Style Slow Viral" data-price="80500" data-category="slow,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+        <img src="https://i.imgur.com/ghNd4So.jpeg" alt="Style Slow Viral" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
+        <div class="flex-1">
+          <div class="font-semibold leading-tight">Style Slow Viral</div>
+          <div class="text-sm opacity-90">💲 Rp80.500</div>
+          <div class="mt-2 flex gap-2 items-center">
+            <button data-audio="audio31" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
+            <a data-buy="Style Slow Viral" href="pembayaran.html?produk=Style%20Slow%20Viral" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
+            <button data-cart="Style Slow Viral" class="add-cart-btn px-3 py-2 rounded-xl bg-[#ffd24d] text-black font-semibold">Tambah ke Keranjang</button>
+          </div>
+          <div class="player-controls-container"></div>
+        </div>
+        <audio id="audio31" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/31.mp3" preload="metadata"></audio>
+      </li>
+
+      <!-- 32 -->
+      <li data-uid="31" data-prod-id="Trap Sa Pamit Viral" data-price="200000" data-category="slow,horeg" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+        <img src="https://i.imgur.com/ghNd4So.jpeg" alt="Trap Sa Pamit Viral" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
+        <div class="flex-1">
+          <div class="font-semibold leading-tight">Trap Sa Pamit Viral</div>
+          <div class="text-sm opacity-90">💲 Rp200.000</div>
+          <div class="mt-2 flex gap-2 items-center">
+            <button data-audio="audio32" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
+            <a data-buy="Trap Sa Pamit Viral" href="pembayaran.html?produk=Trap Sa Pamit Viral" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
+            <button data-cart="Trap Sa Pamit Viral" class="add-cart-btn px-3 py-2 rounded-xl bg-[#ffd24d] text-black font-semibold">Tambah ke Keranjang</button>
+          </div>
+          <div class="player-controls-container"></div>
+        </div>
+        <audio id="audio32" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/32.mp3" preload="metadata"></audio>
+      </li>
+
+      <!-- 33 -->
+      <li data-uid="32" data-prod-id="Style Caro Fvnky" data-price="82000" data-category="slow,horeg,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+        <img src="https://i.imgur.com/ghNd4So.jpeg" alt="Style Caro Fvnky" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
+        <div class="flex-1">
+          <div class="font-semibold leading-tight">Style Caro Fvnky</div>
+          <div class="text-sm opacity-90">💲 Rp82.000</div>
+          <div class="mt-2 flex gap-2 items-center">
+            <button data-audio="audio33" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
+            <a data-buy="Style Caro Fvnky" href="pembayaran.html?produk=Style Caro Fvnky" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
+            <button data-cart="Style Caro Fvnky" class="add-cart-btn px-3 py-2 rounded-xl bg-[#ffd24d] text-black font-semibold">Tambah ke Keranjang</button>
+          </div>
+          <div class="player-controls-container"></div>
+        </div>
+        <audio id="audio33" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/33.mp3" preload="metadata"></audio>
       </li>
 
     </ul>
@@ -822,7 +871,10 @@
       audio26: 35,
       audio27: 44,
       audio28: 99,
-      audio29: 305
+      audio29: 305,
+      audio31:44,
+      audio32:313,
+      audio33:36
     };
 
     // Helper: format seconds -> mm:ss
